# pypandoc

./: .gitignore  .pre-commit-config.yaml  .travis.yml  =0.25.0  Dockerfile  LICENSE  MANIFEST.in  README.md  appveyor.yml  binary_build_prep.py  build.py  docker-compose.yml  filter_test.md  foo.py  md  pypandoc.py  pypandoc.spec  pyproject.toml  pyproject.toml.patch  readme.md  release.md  services.py  setup.py  setup_binary.py  smallcaps.lua  tea.yaml  test.md  tests.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: build.sh  ci.yaml  ci.yml  continuous-deployment.yaml
.travis/: install.sh
binary/: hatch_build.py  pyproject.toml
examples/: services.py
pypandoc/: __init__.py  __main__.py  _cli.py  cli.py  handler.py  pandoc_download.py  py3compat.py  pypandoc.py  pypandoc.spec  test_pypandoc.py
pypandoc_binary.egg-info/: PKG-INFO  SOURCES.txt
test_data/: index.html  test.docx
tests/: test_pandoc_download.py  test_pypandoc.py
