[project]
name = "pypandoc"
version = "1.14"
description = "Thin wrapper for pandoc"
authors = [
  {name = "Jessica Tegner", email = "jessica@jessicategner.com"},
]
readme = "README.md"
license = "MIT"
keywords = ["pandoc", "markdown", "rst", "restructuredtext", "docx", "pdf", "html", "latex", "epub", "odt", "docbook", "mediawiki", "textile", "org", "asciidoc", "t2t" ]
requires-python = ">=3.8"
dependencies = []

classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: System Administrators',
        'Operating System :: POSIX',
        'Programming Language :: Python',
        'Topic :: Text Processing',
        'Topic :: Text Processing :: Filters',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: Implementation :: CPython',
        'Programming Language :: Python :: Implementation :: PyPy'
    ]

packages = [
    { include = "pypandoc" },
]

[project.urls]
Homepage = "https://github.com/JessicaTegner/pypandoc"
Repository = "https://github.com/JessicaTegner/pypandoc.git"
Issues = "https://github.com/JessicaTegner/pypandoc/issues"

[dependency-groups]
dev = [
    "pandocfilters>=1.5.1",
    "setuptools>=75.3.0",
]
