[tool.poetry]
name = "pypandoc"
version = "1.16.2"
description = "Thin wrapper for pandoc"
authors = ["JessicaTegner <jessica@jessicategner.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JessicaTegner/pypandoc"

classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: System Administrators',
        'Operating System :: POSIX',
        'Programming Language :: Python',
        'Topic :: Text Processing',
        'Topic :: Text Processing :: Filters',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Programming Language :: Python :: 3.14',
        'Programming Language :: Python :: 3.15',
        'Programming Language :: Python :: Implementation :: CPython',
        'Programming Language :: Python :: Implementation :: PyPy'
    ]

packages = [
    { include = "pypandoc" },
]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
pandocfilters = "^1.5"
setuptools = {version = ">=78.1.1", python = ">=3.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/JessicaTegner/pypandoc/issues"


# isort
# -----

[tool.isort]
profile = "black"
